--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "test": "jasmine"
+    "test": "jasmine ./spec/API/bicicleta_api_test.spec.js",
+    "api": "jasmine"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,7 +14,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "jasmine": "^3.6.1",
