--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "test": "jasmine ./spec/API/bicicleta_api_test.spec.js",
-    "api": "jasmine"
+    "test": "jasmine ./spec/API/bicicleta_api_test.spec.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.27.0",
+    "mongoose": "^5.10.1",
     "morgan": "~1.9.1",
     "pug": "^3.0.0",
     "request": "^2.88.2"
