--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "test": "jasmine ./spec/API/bicicleta_api_test.spec.js"
+    "test": "jasmine"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
