--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "cookie-parser": "~1.4.5",
+    "debug": "~4.2.0",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "express": "~4.17.1",
     "express-session": "^1.17.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.27.0",
-    "mongoose": "^5.10.1",
+    "moment": "^2.29.0",
+    "mongoose": "^5.10.6",
     "mongoose-unique-validator": "^2.0.3",
-    "morgan": "~1.9.1",
+    "morgan": "~1.10.0",
     "nodemailer": "^6.4.11",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "^3.0.0",
